# fastapi_aouth

./: README.md  pyproject.toml
fastapi_piaic_helloworld/: main.py
tests/: test_main.py
