[tool.poetry]
name = "fastapi-piaic-helloworld"
version = "0.1.0"
description = ""
authors = ["Adnan Ansari <138770731+26Adnanansari@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.111.0"
uvicorn = {extras = ["standard"], version = "^0.29.0"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
